# wqb-agent-lab

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MANIFEST.in  NOTICE  PRODUCT.md  README.md  SECURITY.md  pyproject.toml  run_scan.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
docs/: README.md
release/: allowed_dependency_licenses.json  public_snapshot_manifest.json
schemas/: README.md  __init__.py  candidate.schema.json  diagnosis.schema.json  memory_event.schema.json  plan_proposal.schema.json  research_policy.schema.json  run_manifest.schema.json  run_summary.schema.json  simulation_request.schema.json  simulation_result.schema.json  submission_job.schema.json  workflow_stage_result.schema.json
scripts/: audit_daily_submit_ready.py  audit_unsubmitted.py  bootstrap.ps1  bootstrap.sh  build_behavioral_candidate_generation.py  build_behavioral_proxy_map.py  build_self_corr_repair_scan.py  daily_workflow_dashboard.py  dashboard_assets.py  dev.py  evaluate_agent_ablation.py  evaluate_diagnosis_policies.py  evaluate_output_artifacts.py  evaluate_policy_effectiveness.py  evaluation_worker.py  fetch_submitted.py  hypothesis_ledger.py  json_output.py  kimi_daily_workflow.py  launch_daemon.py  memory_benchmark.py  memory_eval.py  memory_export.py  memory_ingest.py  memory_integrity_check.py  memory_query.py  memory_rebuild_indexes.py  memory_worker.py  onboarding.py  pnl_corr.py  registry_worker.py  scan.py  stop_daemon.py  submit.py  sync_agent_memory.py
src/: __init__.py  agent_callbacks.py  alpha_generator.py  atomic_json.py  config.py  continuous_alpha_scheduler.py  daily_workflow_dashboard.py  diagnosis_policy.py  evaluator.py  failure_diagnosis.py  kimi_daily_workflow.py  llm_planning.py  llm_template_generator.py  loop_validation.py  policy_feedback_governance.py  refiner.py  self_corr_policy.py  self_corr_repair.py  session.py  simulator.py  submitter.py  utils.py  workflow_daemon.py
tests/: __init__.py  test_agent_evaluation_ablation.py  test_agent_evaluation_suite.py  test_agent_memory_sync.py  test_alpha_generator.py  test_alpha_memory_cli.py  test_alpha_memory_evaluation.py  test_alpha_memory_governance.py  test_atomic_json.py  (+91 more)
(+239 files in other folders)
